--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "web-tigres",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "start": "npm run dev",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "format": "prettier --write .",
+    "test": "echo \"Error: no test specified\" && exit 0"
   },
   "dependencies": {
-    "@astrojs/react": "^4.3.0",
     "@astrojs/tailwind": "^3.1.3",
     "astro": "^2.10.15",
     "autoprefixer": "^10.4.14",
@@ -18,9 +21,21 @@
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.6",
-    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "@tailwindcss/typography": "^0.5.9",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-astro": "^0.32.0",
+    "prettier": "^3.1.1",
+    "prettier-plugin-astro": "^0.12.0"
+  },
+  "browserslist": [
+    "defaults",
+    "not IE 11",
+    "not op_mini all"
+  ],
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
   }
 }
