--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
     "@astrojs/tailwind": "^3.1.3",
     "astro": "^2.10.15",
     "autoprefixer": "^10.4.14",
+    "lowdb": "^7.0.1",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
-    "typescript": "^5.8.3",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-astro": "^0.32.0",
     "prettier": "^3.1.1",
-    "prettier-plugin-astro": "^0.12.0"
+    "prettier-plugin-astro": "^0.12.0",
+    "typescript": "^5.8.3"
   },
   "browserslist": [
     "defaults",
